fix the button align ment and cancel btn coloring in item page

--- a/src/app/pages/transactions/transactions.component.scss
+++ b/src/app/pages/transactions/transactions.component.scss
@@ -1,6 +1,6 @@
 .outer {
   height: 90vh;
-  overflow: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 .example-full-width {
